--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,5 +1,7 @@
 include_directories (${CMAKE_CURRENT_SOURCE_DIR})
+add_subdirectory (ActivitiesApplication)
 add_subdirectory (CastlesStrategyServer)
+add_subdirectory (CastlesStrategyClient)
 add_subdirectory (CastlesStrategyLauncher)
 
 if (DUTCHY_ENABLE_TESTS)
