--- a/sources/CastlesStrategyServer/CMakeLists.txt
+++ b/sources/CastlesStrategyServer/CMakeLists.txt
@@ -2,3 +2,4 @@ set (TARGET_NAME CastlesStrategyServer)
 define_source_files (RECURSE GLOB_H_PATTERNS "*.hpp")
 define_dependency_libs (Urho3D)
 setup_library (SHARED)
+target_link_libraries (CastlesStrategyServer ActivitiesApplication)
