--- a/sources/Tests/CMakeLists.txt
+++ b/sources/Tests/CMakeLists.txt
@@ -16,3 +16,4 @@ endmacro ()
 add_subdirectory (TestMovement)
 add_subdirectory (TestAttackAndMovement)
 add_subdirectory (TestPlayerOrders)
+add_subdirectory (TestSpawns)
