--- a/sources/CastlesStrategyClient/CMakeLists.txt
+++ b/sources/CastlesStrategyClient/CMakeLists.txt
@@ -2,4 +2,4 @@ set (TARGET_NAME CastlesStrategyClient)
 define_source_files (RECURSE GLOB_H_PATTERNS "*.hpp")
 define_dependency_libs (Urho3D)
 setup_library (STATIC)
-target_link_libraries (CastlesStrategyClient ActivitiesApplication)
+target_link_libraries (CastlesStrategyClient ActivitiesApplication UIResizerComponent)
