--- a/sources/Tests/CMakeLists.txt
+++ b/sources/Tests/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory (TestMovement)
 add_subdirectory (TestAttackAndMovement)
 add_subdirectory (TestPlayerOrders)
 add_subdirectory (TestSpawns)
+add_subdirectory (TestVillages)
